Fixing white line on mobile team page

--- a/scss/_team.scss
+++ b/scss/_team.scss
@@ -44,7 +44,7 @@ section.team {
     }
 
     .team-card {
-        margin: 25px;
+        margin: 25px auto;
         width: 320px;
         position: relative;
         text-align: left;
